update style on applicant page and list

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ public/img/cat.jpg
 public/img/horsePicture.jpg
 public/img/rabbit.jpg
 public/img/shiba.jpg
+public/img/catcrying.png
+public/img/doge.png
+public/resumes/BunnyResume.png
+public/resumes/cryingResume.png
+public/resumes/DogeResume.png
+public/resumes/HorseResume.png
+public/resumes/PuppyResume.png
