updated applicant page and fixed starred function

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ public/resumes/cryingResume.png
 public/resumes/DogeResume.png
 public/resumes/HorseResume.png
 public/resumes/PuppyResume.png
+public/resumes/KittyResume.png
